--- a/crm1/accounts/templates/accounts/barriles.html
+++ b/crm1/accounts/templates/accounts/barriles.html
@@ -17,20 +17,18 @@
                     <th>Estilo</th>
                     <th>Lote</th>
                     <th>Ubicacion</th>
-                    <th>Cliente</th>
                     <th>Volumen</th>
                     <th>Precio</th>
                 </tr>
 
-                {% for i in products %}
+                {% for barril in barriles %}
                     <tr>                   
-                        <td>{{i.num_barril}}</td>
-                        <td>{{i.estilo}}</td>
-                        <td>{{i.lote}}</td>
-                        <td>{{i.ubicacion}}</td>
-                        <td>{{i.cliente}}</td>
-                        <td>{{i.volumen}}</td>
-                        <td>{{i.precio}}</td>
+                        <td>{{barril.num_barril}}</td>
+                        <td>{{barril.estilo}}</td>
+                        <td>{{barril.lote}}</td>
+                        <td>{{barril.ubicacion}}</td>
+                        <td>{{barril.volumen}}</td>
+                        <td>{{barril.precio}}</td>
                     </tr>
                 {% endfor %}
             </table>
