--- a/crm1/accounts/templates/accounts/navbar.html
+++ b/crm1/accounts/templates/accounts/navbar.html
@@ -27,10 +27,11 @@
             Barriles
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Todos</a></li>
+            <li><a class="dropdown-item" href="{% url 'barriles' %}">Todos</a></li>
             <li><a class="dropdown-item" href="#">En fábrica</a></li>
             <li><a class="dropdown-item" href="#">En clientes</a></li>
-            <li><a class="dropdown-item" href="#">Agregar Barril</a></li>
+            <li><a class="dropdown-item" href="{% url 'nuevo_barril' %}">Agregar Barril</a></li>
+            <li><a class="dropdown-item" href="{% url 'nuevo_lote_barril' %}">Agregar Lote Barril</a></li>
           </ul>
         </li>
         <li class="nav-item">
