--- a/crm1/accounts/templates/accounts/barriles.html
+++ b/crm1/accounts/templates/accounts/barriles.html
@@ -11,18 +11,24 @@
             <h5>Barriles</h5>
         </div>
         <div class="card card-body">
+           
             <table class="table">
                 <tr>
+                    <th></th>
                     <th>Barril</th>
                     <th>Estilo</th>
                     <th>Lote</th>
                     <th>Ubicacion</th>
                     <th>Volumen</th>
                     <th>Precio</th>
-                </tr>
 
+                </tr>
+                
                 {% for barril in barriles %}
+                
                     <tr>                   
+                        <td><input class="form-check-input" type="checkbox" value="{{barril.num_barril}}" id="flexCheckDefault">
+                        </div></td>
                         <td>{{barril.num_barril}}</td>
                         <td>{{barril.estilo}}</td>
                         <td>{{barril.lote}}</td>
@@ -32,11 +38,13 @@
                     </tr>
                 {% endfor %}
             </table>
+            <a class="btn btn-primary  btn-sm btn-block" href="{% url 'update_barril' %}">Modificar</a>
         </div>
+        
     </div>
     
 </div>
-    
+
     
  {% endblock %}
     
